--- a/sass/_featured.scss
+++ b/sass/_featured.scss
@@ -14,6 +14,7 @@
 
     @media only screen and (max-width: $bp-phone) {
         grid-template-columns: 1fr;
+        padding: 0 3px;
     }
 
     &__header{
