--- a/sass/_look-section.scss
+++ b/sass/_look-section.scss
@@ -2,6 +2,7 @@
     grid-row: 5 / 6;
     grid-column: center-start / center-end;   
     margin-top: 2rem; 
+    padding: 0;
 
     display: grid;
     grid-template-columns: 1fr 1.5fr 1fr;
@@ -14,6 +15,7 @@
 
     @media only screen and (max-width: $bp-phone) {
         grid-template-columns: 1fr;
+        padding: 0 3px;
     }
 }
 
