--- a/sass/_news-and-buzz.scss
+++ b/sass/_news-and-buzz.scss
@@ -14,9 +14,6 @@
 
     @media only screen and (max-width: $bp-phone) {
         grid-template-columns: 1fr;
-    }
-
-    @media only screen and (max-width: $bp-phone) {
-                  
+        padding: 0 3px;
     }
 }
