--- a/sass/_photos.scss
+++ b/sass/_photos.scss
@@ -5,11 +5,7 @@
     display: grid;
     grid-template-rows: repeat(2, min-content);
     grid-row-gap: 2.5rem;
-
-    &__header{
-        
-    }
-
+    
     &__content{
         display: grid;
         grid-template-columns: 2.5fr 1fr;
@@ -20,5 +16,9 @@
             grid-template-columns: repeat(auto-fit, minmax(23rem, 1fr));
             grid-column-gap: 3.5rem;
         }
+    }
+
+    @media only screen and (max-width: $bp-phone) {
+        padding: 0 3px;
     }
 }
